# SASA_Framework

./: .gitattributes  .gitignore  LICENSE  README.md
aws-robomaker-bookstore-world/: CMakeLists.txt  package.xml
aws-robomaker-bookstore-world/launch/: bookstore.launch
aws-robomaker-bookstore-world/models/Apriltag36_11_00000/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00000/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00001/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00001/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00002/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00002/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00003/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00003/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00004/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00004/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00005/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00005/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00006/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00006/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00007/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00007/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00008/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00008/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00009/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00009/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00010/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00010/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00011/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00011/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00012/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00012/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00013/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00013/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00014/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00014/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/Apriltag36_11_00015/: model.sdf
aws-robomaker-bookstore-world/models/Apriltag36_11_00015/materials/scripts/: Apriltag.material
aws-robomaker-bookstore-world/models/aws_robomaker_retail_ChairD_01/: model.config  model.sdf
aws-robomaker-bookstore-world/models/aws_robomaker_retail_NightStand_01/: model.config  model.sdf
aws-robomaker-bookstore-world/plugin/: bookstore_light.cc  robot_light.cc
aws-robomaker-bookstore-world/scripts/: lights_off.sh  lights_on.sh
aws-robomaker-bookstore-world/worlds/: bookstore.world  bookstore1.world
aws-robomaker-small-house-world/: CMakeLists.txt  package.xml
aws-robomaker-small-house-world/launch/: small_house.launch
aws-robomaker-small-house-world/msg/: house_light_msgs.msg
aws-robomaker-small-house-world/plugin/: house_light.cc  light_plugin.cc
aws-robomaker-small-house-world/scripts/: lights_off.sh  lights_on.sh
aws-robomaker-small-house-world/worlds/: small_house.world
clearpath_boxer/boxer_control/: CMakeLists.txt  package.xml
clearpath_boxer/boxer_control/config/: control.yaml  robot_localization.yaml  twist_mux.yaml
clearpath_boxer/boxer_control/launch/: control.launch  status.launch
clearpath_boxer/boxer_control/scripts/: posepublisher.py  vel_cmd.py
clearpath_boxer/boxer_description/: CMakeLists.txt  package.xml
clearpath_boxer/boxer_description/launch/: description.launch
clearpath_boxer/boxer_description/urdf/: boxer.urdf.xacro  empty.urdf  materials.urdf.xacro
clearpath_boxer/boxer_description/urdf/accessories/: bumblebee_stereo.urdf.xacro  flashlight.urdf.xacro  kinect_camera.urdf.xacro  mono_camera.urdf.xacro  mono_camera_gazebo.gazebo.xacro  sick_lms1xx_mount.urdf.xacro  stereo_camera.urdf.xacro
clearpath_boxer/boxer_gazebo/: CMakeLists.txt  boxerlights_off.sh  boxerlights_on.sh  package.xml
clearpath_boxer/boxer_gazebo/launch/: boxer_world.launch  spawn_boxer.launch
clearpath_boxer/boxer_gazebo/urdf/: boxer.gazebo.xacro
clearpath_boxer/boxer_msgs/: CMakeLists.txt  package.xml
clearpath_boxer/boxer_msgs/msg/: Drive.msg  Lift.msg  LiftPosition.msg  MCUResetReason.msg  MotorFeedback.msg  Pid.msg  SafetyMode.msg  Status.msg  TractionStatus.msg
clearpath_boxer/boxer_visual/: CMakeLists.txt  package.xml
clearpath_boxer/boxer_visual/config/: led_array_description.yaml  pattern_associations.yaml
clearpath_boxer/boxer_viz/: CMakeLists.txt  package.xml
clearpath_boxer/boxer_viz/launch/: view_model.launch  view_navigation.launch  view_robot.launch
clearpath_boxer/boxer_viz/rviz/: model.rviz  robot.rviz  robot_carto.rviz
localization_method/laser_localization/: CMakeLists.txt  package.xml
localization_method/laser_localization/launch/: amcl.launch  gmapping.launch  gmapping_demo.launch  laser_localization.launch
localization_method/laser_localization/map/: library.pgm  library.yaml
localization_method/laser_localization/scripts/: localization_node.py
localization_method/visual_localization/: CMakeLists.txt  package.xml
localization_method/visual_localization/config/: libraryconfig.ini
localization_method/visual_localization/launch/: rgbd_vision_localization.launch  (+1 more)
odometry_method/fused_odometry/: CMakeLists.txt  package.xml
odometry_method/stereo_odometry/: CMakeLists.txt  package.xml
(+13 files in other folders)
