<?xml version="1.0"?>
<package format="2">
  <name>boxer_gazebo</name>
  <version>0.0.6</version>
  <description>The boxer_gazebo package</description>
  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boxer_control</build_depend>
  <build_depend>boxer_description</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>hector_gazebo_plugins</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>boxer_control</build_export_depend>
  <build_export_depend>boxer_description</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>hector_gazebo_plugins</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <exec_depend>boxer_control</exec_depend>
  <exec_depend>boxer_description</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslaunch</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
