<?xml version="1.0"?>
<package format="2">
  <name>boxer_visual</name>
  <version>0.0.8</version>
  <description>Data related to BOXER's LED strip</description>
  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
