<?xml version="1.0"?>
<package format="2">
  <name>boxer_viz</name>
  <version>0.0.1</version>
  <description>Visualization launchers and helpers for BOXER.</description>
  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boxer_description</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>boxer_description</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>boxer_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
